Fixed header overlapping cover-menu, meaning that on smaller screens the options couldn't be clicked

--- a/src/styles/blocks/hamburger.scss
+++ b/src/styles/blocks/hamburger.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 40px;
   height: 40px;
+  z-index: 100;
   .hamburger-wrapper {
     width: 100%;
     height: 100%;
